--- a/.github/workflows/failing-ci.yaml
+++ b/.github/workflows/failing-ci.yaml
@@ -1,4 +1,4 @@
-name: ci
+name: failing-ci
 
 on:
   push:
@@ -22,4 +22,4 @@ jobs:
         run: pnpm i
 
       - name: Build dependencies
-        run: pnpm run build-sequentially
+        run: pnpm run build
